Now when a ViewItem item is deleted, it picks the item to the right of the deleted item to display next

--- a/PSS/PSS/Shared/LibraryContentViewer.razor
+++ b/PSS/PSS/Shared/LibraryContentViewer.razor
@@ -435,9 +435,9 @@ If it can't find any content, it shows an h1 saying no content.
 	{
 		if (SelectedItem != Guid.Empty)
 		{
+			SelectedItem = MediaList.Count > 0 ? MediaList[viewIndex].uuid : Guid.Empty;
 			C.MoveToTrash(SelectedItem);
 			MediaList.RemoveAt(viewIndex);
-			SelectedItem = Guid.Empty;
 		}
 		else
 		{
