Revert "Remove IndexStarredNoDT.css"
This reverts commit 4988a034fe538e58d149238530724f5bf4f3a513.

--- a/PSS/PSS/Pages/Index.razor
+++ b/PSS/PSS/Pages/Index.razor
@@ -1,6 +1,7 @@
 @page "/"
 
 <title>Home - PSS</title>
+<link href="css/IndexStarredNoDT.css" rel="stylesheet"/>
 
 @{
     <header style="visibility: @headerVis">
