--- a/PSS/PSS/Pages/No Date Taken.razor
+++ b/PSS/PSS/Pages/No Date Taken.razor
@@ -1,6 +1,7 @@
 @page "/no-dt"
 
 <title>No Date Taken - PSS</title>
+<link href="css/IndexStarredNoDT.css" rel="stylesheet"/>
 
 @{
     <header style="visibility: @headerVis">
