--- a/PSS/PSS/Shared/AlbumSelector.razor
+++ b/PSS/PSS/Shared/AlbumSelector.razor
@@ -24,7 +24,7 @@
                     int ii = i;
                     <div @onclick="@(() => { checkedAlbums[ii] = !checkedAlbums[ii]; ClearFolderChecks(); checkedFolderIndex = -1; })" class="album">
                         <div class="coverDiv">
-                            @if (albums[i].albumCover != ""){<img src="@S.LIB_REQUEST_PATH/@albums[i].albumCover" alt="">}
+                            @if (albums[i].cover != ""){<img src="@S.LIB_REQUEST_PATH/@albums[i].cover" alt="">}
                         </div>
                         <input type="checkbox" @bind="@checkedAlbums[ii]" @bind:event="oninput">
                         <span title="@albums[i].name">@albums[i].name</span>
@@ -39,7 +39,7 @@
                     int ii = i;
                     <div class="album" @onclick="@(() => { checkedFolderIndex = ii; ClearAlbumChecks(); ClearFolderChecks(); checkedFolders[ii] = true; })">
                         <div class="coverDiv">
-                            @if (folders[i].albumCover != ""){<img src="@S.LIB_REQUEST_PATH/@folders[i].albumCover" alt="">}
+                            @if (folders[i].cover != ""){<img src="@S.LIB_REQUEST_PATH/@folders[i].cover" alt="">}
                         </div>
                         <input type="checkbox" @bind="@checkedFolders[ii]" @bind:event="oninput">
                         <span title="@folders[i].name">@folders[i].name</span>
@@ -51,8 +51,8 @@
 </div>
 
 @code {
-    private static List<C.Album> albums;
-    private static List<C.Album> folders;
+    private static List<C.Collection> albums;
+    private static List<C.Collection> folders;
     
     private static List<bool> checkedAlbums;
     private static List<bool> checkedFolders;
