--- a/PSS/PSS/Pages/AlbumsMain.razor
+++ b/PSS/PSS/Pages/AlbumsMain.razor
@@ -6,7 +6,7 @@
 
 <header>
     <span id="albumsText">Albums</span>
-    <AlbumCreator Albums="@albums"/>
+    <CollectionCreator Collections="@albums"/>
     
     <div id="checkboxes">
         <div>
